force-app/main/default/objects/Case/fields/Alternative_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Identifier__c</fullName>
    <label>Alternative Identifier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>