force-app/main/default/objects/Case/fields/Amigo__c.field-meta.xml
<CustomField>
    <fullName>Amigo__c</fullName>
    <description>Amigo - description</description>
    <label>Amigo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>