force-app/main/default/objects/Case/fields/Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Solution__c</fullName>
    <description>Proposed solution for the change request.</description>
    <inlineHelpText>Enter a proposed solution for the AW Computing org change request.</inlineHelpText>
    <label>Proposed Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>