force-app/main/default/objects/Case/fields/test_number_field__c.field-meta.xml
<CustomField>
    <fullName>test_number_field__c</fullName>
    <label>test number field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>