force-app/main/default/objects/Case/validationRules/Amigo_long.validationRule-meta.xml
<ValidationRule>
    <fullName>Amigo_long</fullName>
    <active>true</active>
    <description>Amigo should be long</description>
    <errorConditionFormula>LEN( Amigo__c ) &lt; 5</errorConditionFormula>
    <errorMessage>Amigo should be at least 5 characters long!</errorMessage>
</ValidationRule>